Introduce JDK 21 compilation support.
As part of the effort, the following changes have been done.
- Migrated Unit tests from PowerMockito to Mockito
- Due Mockito limitations, some two testcase files (RequestResponseTest.java & NHttpTransportListenerTest.java) have been removed.
- NashornJS related implementation are removed.
- ScriptMediator tests related Ruby language have been commented.
- Since jaxb-api dependency is outdated, jakarta.xml.bind-api dependency is used instead.
- Jacoco agent dependency was updated from 0.8.6 to 0.8.12.
- Maven war plugin version was increased from 2.6 to 3.5.0
- Glassfish jersey dependency used in unit test was updated from 2.35 to 2.41.