@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.synapse</groupId>
         <artifactId>Apache-Synapse</artifactId>
-        <version>4.0.0-wso2v283-SNAPSHOT</version>
+        <version>4.1.0-wso2v1-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -292,7 +292,7 @@
                         </property>
                         <timeStamp>${maven.build.timestamp}</timeStamp>
                     </systemPropertyVariables>
-                    <argLine>-Xms128m -Xmx384m -XX:MaxPermSize=128m</argLine>
+                    <argLine>-Xms128m -Xmx384m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=256m</argLine>
                     <!-- The working directory must be set to the root directory of the Synapse project because the
                          test cases use the configuration files in the repository directory (repository/conf/sample/*.xml)
                          and some of these configuration files contain URLs that are relative to the current working
@@ -452,6 +452,24 @@
         <dependency>
             <groupId>org.glassfish.jersey.inject</groupId>
             <artifactId>jersey-hk2</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>javax.activation-api</artifactId>
+            <version>1.2.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
